modules/grammars/tool/src/test/resources/cocos/valid/UniqueResourceResources.td
package valid;

resources UniqueResourceResources {
    resource SOME_RESOURCE {
        attribute path = "some/other/awesome/path";
    }
}
